Comment unnecessary block

--- a/main.tex
+++ b/main.tex
@@ -66,10 +66,14 @@ Solution of an inverse problem entails determining unknown causes, based on obse
     Sample block.
 }
 \end{columns}
-\block[titleleft, titleoffsetx=2em, titleoffsety=1em, bodyoffsetx=2em,%
- bodyoffsety=-2cm, roundedcorners=10, linewidth=0mm, titlewidthscale=0.7,%
- bodywidthscale=0.9, bodyverticalshift=2cm, titleright]
-{Block outside of Columns}{Along with several options enabled}
+
+
+
+
+%\block[titleleft, titleoffsetx=2em, titleoffsety=1em, bodyoffsetx=2em,%
+% bodyoffsety=-2cm, roundedcorners=10, linewidth=0mm, titlewidthscale=0.7,%
+% bodywidthscale=0.9, bodyverticalshift=2cm, titleright]
+%{Block outside of Columns}{Along with several options enabled}
 
 \end{document}
 
