Add history note

--- a/main.tex
+++ b/main.tex
@@ -40,6 +40,29 @@ with Bessel-type singularity inside an interval
 
 \column{0.5}
 
+
+\block{}{
+The inverse spectral problems theory was discovered and introduced by Soviet-Armenian astrophysicist Victor Ambartsumian.
+
+Just after his graduation from the University of Leningrad he was interested in what degree do the eigenvalues of an ordinary differential operator determine the functions and parameters entering into that operator? Ambartsumian published in 1929 in Zeitschrift f\"ur Physik a paper which contained the statement of the general problem and the proof of the theorem that among all strings the homogeneous string is uniquely defined by the set of its oscillation-frequencies.
+%does the empirical data of atomic physics (the frequencies of spectral lines, the transition probabilities, etc.) define the system of laws and rules of quantum mechanics or more specifically the form of the Schr\"odinger equation?
+Consider the boundary value problem
+\begin{equation}
+-y''+q(x)y=\lambda y, \quad y'(0)=y'(\pi)=0.
+\label{Ambartsumian}
+\end{equation}
+Clearly, if $q(x)=0$ a.e. on $(0,\pi),$ then the eigenvalues
+of \eqref{Ambartsumian} have the form $\lambda_n=n^2$,$n\ge 0$.
+Ambartsumian proved the inverse assertion:
+
+\innerblock[titleleft]{Theorem}
+{If the eigenvalues of \eqref{Ambartsumian} are
+$\lambda_n=n^2,\;n \ge 0,$ then $q(x)=0$ a.e. on $(0,\pi)$.}
+
+During the fifteen years nobody has taken notice of that paper. However in 1944 that work was found by Swedish mathematicians who have obtained many interesting results related to the ''inverse Sturm-Liouville problem`` and thus that paper became the foundation of an entire discipline.
+%(Ambartsumian said ``when an \textit{astronomer} is publishing a \textit{mathematical} paper in a \textit{physical} journal, he cannon expect to attract too many readers'')
+}
+
 \block{What is Inverse Problems?}{
 \innerblock{What is Inverse Problems?}{Solution of an inverse problem entails determining unknown causes, based on observation of their effects.}
 Solution of an inverse problem entails determining unknown causes, based on observation of their effects.
@@ -66,19 +89,19 @@ TAKE FROM document.pdf Part 2 Inverse problems!!!!!!!!!!!!!!!!11
 \
 
 
-The first result in the inverse problem theory is due to Ambartsumian (Ambartsumian V., \"Uber eine Frage der Eigenwerttheorie., Zeit. f\"ur Phys., 53 (1929), pp. 690--695).
-Consider the boundary value problem $L(q(x),0,0),$ i.e.
-\begin{equation}
--y''+q(x)y=\lambda y, \quad y'(0)=y'(\pi)=0.
-\label{Ambartsumian}
-\end{equation}
-Clearly, if $q(x)=0$ a.e. on $(0,\pi),$ then the eigenvalues
-of \eqref{Ambartsumian} have the form $\lambda_n=n^2$,$n\ge 0$.
-Ambartsumian proved the inverse assertion:
-
-\innerblock[titleleft]{Theorem}
-{If the eigenvalues of \eqref{Ambartsumian} are
-$\lambda_n=n^2,\;n \ge 0,$ then $q(x)=0$ a.e. on $(0,\pi)$.}
+%The first result in the inverse problem theory is due to Ambartsumian (Ambartsumian V., \"Uber eine Frage der Eigenwerttheorie., Zeit. f\"ur Phys., 53 (1929), pp. 690--695).
+%Consider the boundary value problem $L(q(x),0,0),$ i.e.
+%\begin{equation}
+%-y''+q(x)y=\lambda y, \quad y'(0)=y'(\pi)=0.
+%\label{Ambartsumian}
+%\end{equation}
+%Clearly, if $q(x)=0$ a.e. on $(0,\pi),$ then the eigenvalues
+%of \eqref{Ambartsumian} have the form $\lambda_n=n^2$,$n\ge 0$.
+%Ambartsumian proved the inverse assertion:
+%
+%\innerblock[titleleft]{Theorem}
+%{If the eigenvalues of \eqref{Ambartsumian} are
+%$\lambda_n=n^2,\;n \ge 0,$ then $q(x)=0$ a.e. on $(0,\pi)$.}
 
 
 
